Fixing new issues with Express... Currently unstable.

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
         .
 
     p.
-        This app is a simple social network manager: it lets you add and remove
+        This app is a simple Security Role manager: it lets you add and remove
         users and "follows" relationships between them.
 
     p
