Continuing adding host logic
Adding new models for hosts, so it can add another layer of abstraction
to the model. It’s pretty untested, although it loads. Checking in to
get it synched.

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,3 +19,4 @@ block content
         strong
             | Get started:&nbsp;
             a(href='/users') View all users
+            a(href='/hosts') View all hosts
