--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href='http://fonts.googleapis.com/css?family=Nobile')
+    link(rel="stylesheet", href='http://fonts.googleapis.com/css?family=Corben:bold')
+
   body
     block content
