Added in Alchemy for graph visualization. Again, work in progress.

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,3 +21,8 @@ block content
         strong
             a(href='/users') View all users
             a(href='/hosts') View all hosts
+
+    h2 Graph Demo:
+    p
+        strong
+            a(href='/graph') Visualization (work in progress)
