--- a/views/index.jade
+++ b/views/index.jade
@@ -3,13 +3,9 @@ extends layout
 block content
     h1 Security Relationships Demo
 
-    p
-        | This is a template app showing the use of&nbsp;
-        a(href='http://www.neo4j.org/', target='_blank') Neo4j
-        |  from Node.js. It uses the&nbsp;
-        a(href='https://github.com/thingdom/node-neo4j', target='_blank') node-neo4j
-        |  library, available on npm as&nbsp;
-        code neo4j
+    p.
+        This application is to start developing the complex relationships between different types of assests in an organization, whether they
+        are human, physical or application. It's a way to view risk across multiple dimensions and try to define paterns from them.
 
     h2 Basic Functionality
     p.
